# fastdata-indexer

./: .gitignore  Cargo.toml
fastfs-sub-indexer/: Cargo.toml
fastfs-sub-indexer/src/: fastfs.rs  main.rs  scylla_types.rs
main-indexer/: Cargo.toml
main-indexer/src/: fastfs.rs  main.rs  scylladb.rs  types.rs
scylladb/: Cargo.toml
scylladb/src/: lib.rs  types.rs
src/: main.rs  redis_db.rs
suffix-fetcher/: Cargo.toml
suffix-fetcher/src/: lib.rs
