[workspace.package]
version = "1.0.0"
authors = ["Fastnear Inc <hello@fastnear.com>"]
edition = "2021"
repository = "https://github.com/fastnear/libs"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"

[workspace]
resolver = "2"
members = [
    "main-indexer",
]

[workspace.dependencies]
dotenv = "0.15.0"
fastnear-primitives = "0.30.1"
fastnear-neardata-fetcher = "0.30.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.12.0"
reqwest = { version = "0.12.2", features = ["json"] }
tokio = { version = "1", features = ["time", "sync", "rt-multi-thread", "macros"] }
tracing = { version = "0.1.13", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
borsh = { version = "1.5.0", features = ["derive"] }
ctrlc = "3"
scylla = { version = "1.1.0", features = ["rustls-023", "full-serialization"] }
rustls = { version = "0.23", features = ["aws_lc_rs"] }
anyhow = "1.0.70"
num-bigint = "0.4.6"
num-traits = "0.2.19"
