[package]
name = "fastfs-sub-indexer"
description = "Indexer for FastFS FastData standard."
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
scylladb = { path = "../scylladb" }
suffix-fetcher = { path = "../suffix-fetcher" }

dotenv.workspace = true
fastnear-primitives.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ctrlc.workspace = true
anyhow.workspace = true
